--- a/tmc-cd/cd-resources.yaml
+++ b/tmc-cd/cd-resources.yaml
@@ -34,6 +34,7 @@ spec:
   - inline:
       paths:
         eso.yaml: |
+          #@ load("@ytt:data", "data")
           ---
           apiVersion: source.toolkit.fluxcd.io/v1beta2
           kind: HelmRepository
@@ -75,7 +76,7 @@ spec:
           kind: ServiceAccount
           metadata:
             annotations:
-              eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/cdd-demo-tanzu-continuousdelivery-resources-eso-aws
+              eks.amazonaws.com/role-arn: #@ "arn:aws:iam::537807987484:role/" + data.values.cluster_name + "-tanzu-continuousdelivery-resources-eso-aws"
             name: eso-aws
             namespace: tanzu-continuousdelivery-resources
           ---
