Try to fix namespace ordering

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tdp-overlay.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tdp-overlay.yaml
@@ -1,4 +1,11 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    kapp.k14s.io/exists: ""
+  name: tap-install
+---
+apiVersion: v1
 kind: Secret
 metadata:
   name: tdp-app-image-overlay-secret
