--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tbs-registry-export.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tbs-registry-export.yaml
@@ -1,3 +1,7 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: build-service
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretExport
