--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
@@ -28,15 +28,60 @@ stringData:
             service:
               annotations:
                 external-dns.alpha.kubernetes.io/hostname: '*.run.aws-work.grogscave.net'
-        tap_gui:
-          app_config:
-            auth:
-              environment: development
-            customize:
-              default_route: /home
-            grafana:
-              domain: https://grafana.run.aws-work.grogscave.net # URL of your Grafana domain
-              unifiedAlerting: true
+
+    ootb_supply_chain_testing_scanning:
+      gitops:
+        server_address: https://github.com
+        repository_owner: cdelashmutt-pivotal
+        repository_name: cdd-demo-gitops
+        commit_strategy: pull_request
+        pull_request:
+          server_kind: github
+          commit_branch: supply_chain
+          pull_request_title: Delivery from Supply Chain
+          pull_request_body: This is a candidate release for promotion
+
+    scanning:
+      resources:
+        limits:
+          cpu: "500m"
+          memory: 3Gi
+        requests:
+          cpu: 200m
+          memory: 1Gi
+          
+    tap_gui:
+      tls:
+        namespace: default
+        secretName: default-cert
+      app_config:
+        auth:
+          environment: development
+        customize:
+          default_route: /home
+        grafana:
+          domain: https://grafana.run.aws-work.grogscave.net # URL of your Grafana domain
+          unifiedAlerting: true
+        catalog:
+          locations:
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/demo-clusters-tap/blob/main/clusters/cdd-demo-aws/backstage-catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/tsalm-vmware/spring-cloud-demo-tap/blob/main/tap/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/java-rest-service/blob/main/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/weatherforecast-steeltoe/blob/main/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/appsso-starter-java/blob/main/catalog/catalog-info.yaml
+        techdocs:
+          builder: 'external'
+          publisher:
+            type: 'awsS3'
+            awsS3:
+              bucketName: 'cdd-demo-aws-techdocs'
+              accountId: '537807987484'
+              region: 'us-east-2'
 
         namespace_provisioner:
           default_parameters:
