--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -13,18 +13,24 @@ stringData:
   values.yaml: |
     tap_install:
       version:
-        package_repo_bundle_tag: "1.7.0"
-        package_version: "1.7.0"
+        package_repo_bundle_tag: "1.7.1"
+        package_version: "1.7.1"
       values:
         profile: iterate
         shared:
           ingress_domain: "iterate.aws-work.grogscave.net"
           image_registry:
             project_path: "gcr.io/pa-cdelashmutt/cdd-demo-tap/supply-chain"
+            secret:
+              name: "registry-credentials"
+              namespace: "tanzu-continuousdelivery-resources"
           kubernetes_version: "1.27"
         supply_chain: basic
         local_source_proxy:
           repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
+          push_secret:
+            name: "registry-credentials"
+            namespace: "tanzu-continuousdelivery-resources"
         contour:
           envoy:
             service:
