Don't create export

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -24,6 +24,7 @@ stringData:
             secret:
               name: "registry-credentials"
               namespace: "tanzu-continuousdelivery-resources"
+              create_export: false
           kubernetes_version: "1.27"
         supply_chain: basic
         local_source_proxy:
@@ -31,6 +32,7 @@ stringData:
           push_secret:
             name: "registry-credentials"
             namespace: "tanzu-continuousdelivery-resources"
+            create_export: false
         contour:
           envoy:
             service:
