Split out secrets

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
@@ -21,8 +21,43 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-29T15:52:05Z"
-    mac: ENC[AES256_GCM,data:eYqZz2Nal9xY7WhIGKuu+3GrC7lPXJ9OZQomq82PpHnNIBZGoTzdgh82yfdPIxGkSZYXhuG6vQKELtl9Em5Qz7lU1ZFuAr239x6BWD3FAFd03vNZhRaBz2NKjBK5HwT0y8LVb5q1NMkO339D4v2hki8GtDH3QdwHP73hTku8xRI=,iv:fQlwlSLgn2/ew3E5kGwy6SadzT8yTKNR/pYTPvBOppY=,tag:BUZPnl9h68gkcvwDAylV4Q==,type:str]
+    lastmodified: "2023-11-29T18:46:58Z"
+    mac: ENC[AES256_GCM,data:TrKbpqKK593mzmBwc6Ydzl7nMmfImqG0p6FZYjBk5bYg1C6dTUxYrolgRcaaoKvU8va2EMm41KmN0ysC++tHfFjAPHeSLDNTXJZ/UfRmGmk5sAEEJfc8deGGWPjOmMyuGR2qh6TQb6s56Jjw07S5Qus+AJ7xaJN/aqet9UvbqN4=,iv:u7g0zlvRUG+IPl8Q96hV9H4UwIr5whHavklCR7aOR2I=,tag:npCLkE583NpufZQ1eXy8+g==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
+---
+apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42rGWGC0VwfoLvZyAkSs9HbyU50qL6mXHzWm+x1R0=,tag:olkPOfJPRiNUUmNt9e8TtA==,type:str]
+kind: ENC[AES256_GCM,data:FqwQGkBQ8l4bBbtNSzM=,iv:SOt7hHi0PVwDFS5eXLzZ9h0NatjBJhPTeGSuH/NfHr8=,tag:9b1VfY6qpfM1jEH51sSfIw==,type:str]
+metadata:
+    name: ENC[AES256_GCM,data:H9uMlkpmQ8x5g142MwasdbviRGsPaXycw3s3l4xJ,iv:ptu+ReepAxUPIrkorj/qwE6DTqhh/GLpSoQ2p+CQUi0=,tag:sfzcpRJOVPzzkNk1Eljonw==,type:str]
+spec:
+    inputResources:
+        - name: ENC[AES256_GCM,data:x0ubiI1JOpUgB9R188sW4mbfGbM=,iv:NT3pVuoMRjDFaIJBVuNng+FpfUrqjuULVpslile7BTI=,tag:014fg8Nk838imhHuTDcZNA==,type:str]
+          ref:
+            apiVersion: ENC[AES256_GCM,data:psY=,iv:pbkXLgSBoCkrQaNl3cXZr7/KjTix3NexpPjKboG1Ziw=,tag:V/H4yvoW7/neBpmNT64a4w==,type:str]
+            kind: ENC[AES256_GCM,data:ZHK1AZff,iv:sPWFTEKqrZVbCadOLfnbMbN96r+UIlgJhpEiw6Csq7A=,tag:p8M9wkIPatWtwa+qHUd5BQ==,type:str]
+            name: ENC[AES256_GCM,data:OtjkjVk30qnqmdtfjKT2psMFBR4=,iv:PhYHegyonmkQZZ+RtnNzzIxZclmakmkVtqBv6rU4UE8=,tag:qNtA4/iQMfgIxkE6cuIIOw==,type:str]
+    template:
+        data:
+            dockerconfigjson: ENC[AES256_GCM,data:3t2SpsE/MWycR54cru5hX+jQ5+DNGBR8YrK9L1A+ReUX1tiSCGteT5C+j1zB7g==,iv:NMTnyXNqjwDafNUgKrGbrkclYy9E4CXNcdMNRcY+8oM=,tag:2EqGZdRc3/zqL3/BJdrKlA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1lq56x4rdmlw7tn23s0t7n62mzqc3q7kna4fe0r0v8hqplk2yt4kqgauj2t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUeHZhTm1DY2hBUkk0eER2
+            S0ZhbzJDd3RhWC8xODZJVVEyNitKL0IvVDJFClA2YTJkTGNVTlZBWnFTOTFGMGQ4
+            UTNmb1VXRnVWbGtWVThxVFBvY3E4WEEKLS0tIGZseGlwUlRsOU1tTWRMNzJSdGtY
+            cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
+            0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-11-29T18:46:58Z"
+    mac: ENC[AES256_GCM,data:TrKbpqKK593mzmBwc6Ydzl7nMmfImqG0p6FZYjBk5bYg1C6dTUxYrolgRcaaoKvU8va2EMm41KmN0ysC++tHfFjAPHeSLDNTXJZ/UfRmGmk5sAEEJfc8deGGWPjOmMyuGR2qh6TQb6s56Jjw07S5Qus+AJ7xaJN/aqet9UvbqN4=,iv:u7g0zlvRUG+IPl8Q96hV9H4UwIr5whHavklCR7aOR2I=,tag:npCLkE583NpufZQ1eXy8+g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
