--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -29,7 +29,7 @@ stringData:
         local_source_proxy:
           repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
           push_secret:
-            name: "registry-credentials"
+            name: "local-source-proxy-credentials"
             namespace: "tanzu-continuousdelivery-resources"
             create_export: true
         contour:
