Namespace for SecretTemplate

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
@@ -21,8 +21,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-29T19:37:32Z"
-    mac: ENC[AES256_GCM,data:F3lBzLJdg7SwemdnBIRqApUVVVU61pZF7DItyod6vmWgYosw4zyiIwRu1wqLGmU5g3QJYlgsHOl4Uqq92NO2BIISlcYMfIhrKlX8L6WHECcNb2K7eJ4Gsf+InViPsHoRGZBsqLFyc999CvHu3KLPOKZl34W7E2PrY/4Eulyl+No=,iv:POEIGzn5sDWfSEDavxBrTFAYBbLVRj3s3FfRwPDExBU=,tag:N9fO7J1MjtkEyN9j6YvHDA==,type:str]
+    lastmodified: "2023-11-29T19:45:29Z"
+    mac: ENC[AES256_GCM,data:NpGLe2VoqEqq7hYMZ4llREFUJhyU0JpVBn9O11Z8EpHzvehZrVtJXIcLyKN9MSGHwT+x4UcPjwaid5jvDvL+Gbzil7yMiOW5PcI4wh3h4mB2qLGdOzkTZxiBBZozdnwlL9qvhNUsoqEUXmXzLLEkmfdQ7ulegMFVwjzGMSuS3G0=,iv:2HC3H/lmgHHiydHc8One89n3XXLRn7qbwIbph3Nd5VM=,tag:KqK6Wwj3Aji+6Ckj96PpXA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -31,6 +31,7 @@ apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42
 kind: ENC[AES256_GCM,data:FqwQGkBQ8l4bBbtNSzM=,iv:SOt7hHi0PVwDFS5eXLzZ9h0NatjBJhPTeGSuH/NfHr8=,tag:9b1VfY6qpfM1jEH51sSfIw==,type:str]
 metadata:
     name: ENC[AES256_GCM,data:H9uMlkpmQ8x5g142MwasdbviRGsPaXycw3s3l4xJ,iv:ptu+ReepAxUPIrkorj/qwE6DTqhh/GLpSoQ2p+CQUi0=,tag:sfzcpRJOVPzzkNk1Eljonw==,type:str]
+    namespace: ENC[AES256_GCM,data:qQeLqGsYZIbbetD1i+NZSTi8/HyYAYN7fZlaZk8IOyrZ0Q==,iv:/hKt0wTpg/1bqJwM20BJt84FhpKRa3wRiymj23/zH70=,tag:wCXYIz2qrlw4k/ngDhcNiA==,type:str]
 spec:
     inputResources:
         - name: ENC[AES256_GCM,data:x0ubiI1JOpUgB9R188sW4mbfGbM=,iv:NT3pVuoMRjDFaIJBVuNng+FpfUrqjuULVpslile7BTI=,tag:014fg8Nk838imhHuTDcZNA==,type:str]
@@ -56,8 +57,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-29T19:37:32Z"
-    mac: ENC[AES256_GCM,data:F3lBzLJdg7SwemdnBIRqApUVVVU61pZF7DItyod6vmWgYosw4zyiIwRu1wqLGmU5g3QJYlgsHOl4Uqq92NO2BIISlcYMfIhrKlX8L6WHECcNb2K7eJ4Gsf+InViPsHoRGZBsqLFyc999CvHu3KLPOKZl34W7E2PrY/4Eulyl+No=,iv:POEIGzn5sDWfSEDavxBrTFAYBbLVRj3s3FfRwPDExBU=,tag:N9fO7J1MjtkEyN9j6YvHDA==,type:str]
+    lastmodified: "2023-11-29T19:45:29Z"
+    mac: ENC[AES256_GCM,data:NpGLe2VoqEqq7hYMZ4llREFUJhyU0JpVBn9O11Z8EpHzvehZrVtJXIcLyKN9MSGHwT+x4UcPjwaid5jvDvL+Gbzil7yMiOW5PcI4wh3h4mB2qLGdOzkTZxiBBZozdnwlL9qvhNUsoqEUXmXzLLEkmfdQ7ulegMFVwjzGMSuS3G0=,iv:2HC3H/lmgHHiydHc8One89n3XXLRn7qbwIbph3Nd5VM=,tag:KqK6Wwj3Aji+6Ckj96PpXA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
