--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -32,6 +32,10 @@ stringData:
             name: "local-source-proxy-credentials"
             namespace: "tanzu-continuousdelivery-resources"
             create_export: true
+          pull_secret:
+            name: "local-source-proxy-credentials"
+            namespace: "tanzu-continuousdelivery-resources"
+            create_export: false
         contour:
           envoy:
             service:
