--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -28,6 +28,11 @@ stringData:
         supply_chain: basic
         local_source_proxy:
           repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
+          push_secret:
+            secret:
+              name: "local-source-proxy-credentials"
+              namespace: "tanzu-continuousdelivery-resources"
+              create_export: true
         contour:
           envoy:
             service:
