Try secret again

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
@@ -21,8 +21,37 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-01T20:48:21Z"
-    mac: ENC[AES256_GCM,data:OSt5X2OXda5SxYKwUjwtiZtGmO4aFGUl1eFTjAZS9bKhWFMAQF+GtI2pO45eKzGrVzKu0J91dDvonugKGnxyKqcBp2QiNxSkDIDp6zlIcl8AkqErgeq1CnHiz2hu56evBDUqcVS6ZjIuVIBeFenCi39z08SBPW8TQ6dEYdN0blU=,iv:5LQOHG97VJWfbHjRC83yONfim44y0D8dWbWPYnl7Ihs=,tag:7DayDc30Qln3ZZx1io9mvA==,type:str]
+    lastmodified: "2023-12-04T21:32:52Z"
+    mac: ENC[AES256_GCM,data:pCgDJl/XtW37T4ke28iL6GNEdTvR36/OUvsw2pLXN6KKUxXkB3/Kob5seyS0HDb6/Qf+HbVQBnXwgwJ3wWuERlOOXJuakdxC6uUSNhMTSAIFEYRKJNOJ8PLhMSk3sHp0SaS6N3+OMuukgTa6R2uLTF9qDJcTFX0PfTCQ7S08jp0=,iv:+xjR5Iyr9nyQcUZWM+Je7ka6CLPY04jXMy6EPxIgBU4=,tag:js2Sj30TYhtnUIZ3EVGZPg==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
+---
+apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42rGWGC0VwfoLvZyAkSs9HbyU50qL6mXHzWm+x1R0=,tag:olkPOfJPRiNUUmNt9e8TtA==,type:str]
+kind: ENC[AES256_GCM,data:ZpM6GJRENWeo8wnJ,iv:yquUVzkjuFjK4oTcYePL/JpfbLNGmtlhcsCBqNyqPm0=,tag:L/fdXRmPj/bERzr3gl/8UQ==,type:str]
+metadata:
+    name: ENC[AES256_GCM,data:UCYkuP3vFv8q+NYMcLaPC0YVeC4=,iv:TGg+eZvajS49SoR5v3huYz9htmCAqOiWE54NZC0/Ulo=,tag:g5ngNKAsDJsbaysuVD+JCA==,type:str]
+    namespace: ENC[AES256_GCM,data:qQeLqGsYZIbbetD1i+NZSTi8/HyYAYN7fZlaZk8IOyrZ0Q==,iv:/hKt0wTpg/1bqJwM20BJt84FhpKRa3wRiymj23/zH70=,tag:wCXYIz2qrlw4k/ngDhcNiA==,type:str]
+spec:
+    toNamespaces:
+        - ENC[AES256_GCM,data:Jg==,iv:jALPwd/RN93sMavrfS5m3WMb8z28sDgMYJ+yORKODV8=,tag:icN9OYYWPNQeYxsPw/VAKg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1lq56x4rdmlw7tn23s0t7n62mzqc3q7kna4fe0r0v8hqplk2yt4kqgauj2t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUeHZhTm1DY2hBUkk0eER2
+            S0ZhbzJDd3RhWC8xODZJVVEyNitKL0IvVDJFClA2YTJkTGNVTlZBWnFTOTFGMGQ4
+            UTNmb1VXRnVWbGtWVThxVFBvY3E4WEEKLS0tIGZseGlwUlRsOU1tTWRMNzJSdGtY
+            cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
+            0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-04T21:32:52Z"
+    mac: ENC[AES256_GCM,data:pCgDJl/XtW37T4ke28iL6GNEdTvR36/OUvsw2pLXN6KKUxXkB3/Kob5seyS0HDb6/Qf+HbVQBnXwgwJ3wWuERlOOXJuakdxC6uUSNhMTSAIFEYRKJNOJ8PLhMSk3sHp0SaS6N3+OMuukgTa6R2uLTF9qDJcTFX0PfTCQ7S08jp0=,iv:+xjR5Iyr9nyQcUZWM+Je7ka6CLPY04jXMy6EPxIgBU4=,tag:js2Sj30TYhtnUIZ3EVGZPg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -57,8 +86,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-01T20:48:21Z"
-    mac: ENC[AES256_GCM,data:OSt5X2OXda5SxYKwUjwtiZtGmO4aFGUl1eFTjAZS9bKhWFMAQF+GtI2pO45eKzGrVzKu0J91dDvonugKGnxyKqcBp2QiNxSkDIDp6zlIcl8AkqErgeq1CnHiz2hu56evBDUqcVS6ZjIuVIBeFenCi39z08SBPW8TQ6dEYdN0blU=,iv:5LQOHG97VJWfbHjRC83yONfim44y0D8dWbWPYnl7Ihs=,tag:7DayDc30Qln3ZZx1io9mvA==,type:str]
+    lastmodified: "2023-12-04T21:32:52Z"
+    mac: ENC[AES256_GCM,data:pCgDJl/XtW37T4ke28iL6GNEdTvR36/OUvsw2pLXN6KKUxXkB3/Kob5seyS0HDb6/Qf+HbVQBnXwgwJ3wWuERlOOXJuakdxC6uUSNhMTSAIFEYRKJNOJ8PLhMSk3sHp0SaS6N3+OMuukgTa6R2uLTF9qDJcTFX0PfTCQ7S08jp0=,iv:+xjR5Iyr9nyQcUZWM+Je7ka6CLPY04jXMy6EPxIgBU4=,tag:js2Sj30TYhtnUIZ3EVGZPg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
