--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/git-auth.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/git-auth.sops.yaml
@@ -5,10 +5,11 @@ metadata:
     namespace: ENC[AES256_GCM,data:9ZbZekOVa+WCciOdpM6StN7UuZKty/tmc+vPlxCjYBs6xA==,iv:zoZQAbQR0x2oBXxx9RN/myjny64IfjOHOW21C0LglJA=,tag:NI7lwHz7doCZn6s0zuJzeA==,type:str]
     annotations:
         tekton.dev/git-0: ENC[AES256_GCM,data:H886LrG27GjnqMdvYBbLsVYR,iv:j9U3ip8OgmV+DlQEUgbuOAxCyfejkxmMSwzfb0zzP/Q=,tag:n994TkMVdI6M6VrcA3BTQA==,type:str]
+        github.com/token-name: ENC[AES256_GCM,data:g4THRp9ocsn8lu/d,iv:W8Xm0LZpGSaxM0Hds3u+fci6sl2uFqEHE59tEcAmf0M=,tag:6/YUTTcDpPpqbnGaIwm1nQ==,type:str]
 type: ENC[AES256_GCM,data:VNZBGHBgrAge/IeG+PERZAQwNeUtfrd2,iv:iJ0BkIMvnz5aNh0D21EQJFlIJHfrPzKnsduKstbPGwY=,tag:30n2hKgd+fBV+aug6tr20Q==,type:str]
 stringData:
     username: ENC[AES256_GCM,data:f0yMN6n07VPfwgQ94VSeqwiD1w==,iv:qmv3UiN9v0pjoPqQ9vUMllOaqXP8lJUtL78JUBdHr0w=,tag:9Qj6I5C8QHUk3Os07PbEyQ==,type:str]
-    password: ENC[AES256_GCM,data:yfHOGmZk6NrvGijV2zYH0LAnbgwCsm+2z4ZAFnEg3TZdlMp/lZps9qsShPsbDH/0mGKH79R1nc7ngSNAiRn1SFBKHOocGmVnzOLf9k22NCX08K4WAOZG25oJHfNw,iv:zBh5F8gaIR1qIPP5RVpTGpk1o81wXXkwbE/k24CM0hE=,tag:0kAbRqlSlGLTvehKcUbESw==,type:str]
+    password: ENC[AES256_GCM,data:FQXEvsu7+pRninloGVJ4Ux/z9Yc813nd84wZuU1KLFWHYnOQg0IHGcfsifoRjKJ3xilvHY3g9gAA007yfAxMjau4v6pE6QSx+PZXWIaT7W4oTTeEfbcakUffqOPB,iv:Jil3VLqT94sYzIkKqW+1/dLkkefbW8s4Neajdd1nH3E=,tag:kRrNwK3P1GohhRhaPkXmCQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +25,8 @@ sops:
             QitNNGkyOHdvZ3VRMFpTL3Rnc0ZVaHcKGYaGJPHediEMyNwfNim1QRbFJB+6JfQb
             T+RjA70y3W/D7n78BUHZwSY/0YDVnj5dGoDyfjhgn4AsdZTbkU6SUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-08T14:43:27Z"
-    mac: ENC[AES256_GCM,data:o60WwEnUhA/eGUWU+SkKYUgGGXZdT80y6ALtcsfn2PxXVb2U2nMtRm8vFspdJlz2bzKk/qGB2bXTbmFZS5OAZJNMVyG/VdV/evQEXPolsUFbQ823ndpTcDsX4hQRPrLYAaWIYP01E/6097pMBmJ7aKpfBBtTzeJr4S3+PDHA33k=,iv:qB05N2GbZrgirjOrYW/A0GVhWqHNtSNEhFkpzZrOfRg=,tag:6NySekO4DwwziYkXAWhknA==,type:str]
+    lastmodified: "2023-12-06T16:55:09Z"
+    mac: ENC[AES256_GCM,data:ImFlSN0gmw4WDLZtA6v9Ugpum/z5musYHLbE/+N3uy25/d4drA1MNevrf0PDm5z2ROkzTUs6+b79Izo+emceEHye0+34Gz81m9iqPCZssmNJf54WWm/18Cx/9mZOTSF3HDAyGnhZalNSvUN//5wAEGQm+Y5wrMfLEKb2gL9KjVE=,iv:Z5a3yoEL1Lar502ustEd3qXfzVI0lgAO99Hi5C/1Uuc=,tag:hombj8/OeEZGMg8TMnj/XQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.7.3
+    version: 3.8.1
