Finally fix LSP

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
@@ -21,8 +21,37 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:31:06Z"
-    mac: ENC[AES256_GCM,data:PjJDdBLfwHRxBqfAloL8yy06NDnmxHBF6PlRvrFkiGdYiFD0ExWKVoK05K6+ARjbVVYnPHTwva53telKY75Vgw9N+h+8XLQYGlec/uqbnSTohBnjNMVKN3mgmt6Ad5XozI7kTkBt5peEpqrtvF16Vsdd7asPS/zFZoruDVn20to=,iv:5QEhG8iQKEKV4i87T0dAgN/eKHkq+hTf0nIiZdCJTBA=,tag:HTjWfurY0ihsLYw/BCuFBA==,type:str]
+    lastmodified: "2023-12-08T20:47:37Z"
+    mac: ENC[AES256_GCM,data:Dk1EM4+9gdMIVK4/g9I7Y1R+ExmagLP6za5i2XXURyrOArOliDaJQo64htFaU7MgrnhEenrXKVS5De00bZ8lvEkrTSzF9Hn+Exj4lThXMKJB9WwYm+kWhB+DK6Rz3gpOvyhVx8d1jChbqTL86no5v0meUUb9uVg7jmUl49O6xUE=,iv:Oj5JzLL5Sfv/tcSrF9L3TH0x58WVMX3irhgCZhE7Y3g=,tag:et236F1JL7jDMs7HEc7IHw==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
+---
+apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42rGWGC0VwfoLvZyAkSs9HbyU50qL6mXHzWm+x1R0=,tag:olkPOfJPRiNUUmNt9e8TtA==,type:str]
+kind: ENC[AES256_GCM,data:GbKoJy7QJyM4wANC,iv:HcW1iUSnTqc4rsuH/QuZLAFsu6oTAD1B2HMaXqce6nY=,tag:ol2U0LPEKTla1jLG07dy9w==,type:str]
+metadata:
+    name: ENC[AES256_GCM,data:UCYkuP3vFv8q+NYMcLaPC0YVeC4=,iv:TGg+eZvajS49SoR5v3huYz9htmCAqOiWE54NZC0/Ulo=,tag:g5ngNKAsDJsbaysuVD+JCA==,type:str]
+    namespace: ENC[AES256_GCM,data:qQeLqGsYZIbbetD1i+NZSTi8/HyYAYN7fZlaZk8IOyrZ0Q==,iv:/hKt0wTpg/1bqJwM20BJt84FhpKRa3wRiymj23/zH70=,tag:wCXYIz2qrlw4k/ngDhcNiA==,type:str]
+spec:
+    toNamespaces:
+        - ENC[AES256_GCM,data:fg==,iv:tmuJmmyVzlp2iYv48l8Hr5iQFavnWV9uaOnoziLiRoo=,tag:+XghlEFAb/M2qCYvIlW5fQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1lq56x4rdmlw7tn23s0t7n62mzqc3q7kna4fe0r0v8hqplk2yt4kqgauj2t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUeHZhTm1DY2hBUkk0eER2
+            S0ZhbzJDd3RhWC8xODZJVVEyNitKL0IvVDJFClA2YTJkTGNVTlZBWnFTOTFGMGQ4
+            UTNmb1VXRnVWbGtWVThxVFBvY3E4WEEKLS0tIGZseGlwUlRsOU1tTWRMNzJSdGtY
+            cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
+            0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-08T20:47:37Z"
+    mac: ENC[AES256_GCM,data:Dk1EM4+9gdMIVK4/g9I7Y1R+ExmagLP6za5i2XXURyrOArOliDaJQo64htFaU7MgrnhEenrXKVS5De00bZ8lvEkrTSzF9Hn+Exj4lThXMKJB9WwYm+kWhB+DK6Rz3gpOvyhVx8d1jChbqTL86no5v0meUUb9uVg7jmUl49O6xUE=,iv:Oj5JzLL5Sfv/tcSrF9L3TH0x58WVMX3irhgCZhE7Y3g=,tag:et236F1JL7jDMs7HEc7IHw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -41,7 +70,7 @@ spec:
             name: ENC[AES256_GCM,data:OtjkjVk30qnqmdtfjKT2psMFBR4=,iv:PhYHegyonmkQZZ+RtnNzzIxZclmakmkVtqBv6rU4UE8=,tag:qNtA4/iQMfgIxkE6cuIIOw==,type:str]
     template:
         data:
-            dockerconfigjson: ENC[AES256_GCM,data:9PF0Qwnu78g73CEZj1Ce22ITNhJW4FqXlKrGyZTwmbMb+CvnMLwBTrNn+2bhp5vx,iv:+vsruo1kM+Szw25lG28EE9+WNYAFdFHfoD4lKkThD5Y=,tag:MHYwYwk81oW1G6d8T3PZuw==,type:str]
+            .dockerconfigjson: ENC[AES256_GCM,data:6EFvSOykIxHf6qZQR1LnOGPOkTqdlUnlX5l4zv67S/agoCWUmaWWudN1rLl1n8My,iv:AQ1nEOYL5Ndgf0ec67d2efKSeSF5/VGF5fIXG5FTkEg=,tag:sx3xF37Cb1g8szGTkCX9+w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -57,8 +86,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:31:06Z"
-    mac: ENC[AES256_GCM,data:PjJDdBLfwHRxBqfAloL8yy06NDnmxHBF6PlRvrFkiGdYiFD0ExWKVoK05K6+ARjbVVYnPHTwva53telKY75Vgw9N+h+8XLQYGlec/uqbnSTohBnjNMVKN3mgmt6Ad5XozI7kTkBt5peEpqrtvF16Vsdd7asPS/zFZoruDVn20to=,iv:5QEhG8iQKEKV4i87T0dAgN/eKHkq+hTf0nIiZdCJTBA=,tag:HTjWfurY0ihsLYw/BCuFBA==,type:str]
+    lastmodified: "2023-12-08T20:47:37Z"
+    mac: ENC[AES256_GCM,data:Dk1EM4+9gdMIVK4/g9I7Y1R+ExmagLP6za5i2XXURyrOArOliDaJQo64htFaU7MgrnhEenrXKVS5De00bZ8lvEkrTSzF9Hn+Exj4lThXMKJB9WwYm+kWhB+DK6Rz3gpOvyhVx8d1jChbqTL86no5v0meUUb9uVg7jmUl49O6xUE=,iv:Oj5JzLL5Sfv/tcSrF9L3TH0x58WVMX3irhgCZhE7Y3g=,tag:et236F1JL7jDMs7HEc7IHw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
