--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/tap-role.yaml
@@ -31,6 +31,10 @@ stringData:
             service:
               annotations:
                 external-dns.alpha.kubernetes.io/hostname: '*.iterate.aws-work.grogscave.net'
+        local_source_proxy:
+          push_secret:
+            name: local-source-proxy-credentials
+            namespace: tanzu-continuousdelivery-resources
 ---
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
