--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-iterate/registry-credentials.sops.yaml
@@ -21,8 +21,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:51:27Z"
-    mac: ENC[AES256_GCM,data:gbHONUVYk6OyhjMvvo0kpRjbjqAcfGMCieOsxr8iwYcwYyPearjFMlXL/apP4V6ps+fpcfBuQzLOgPYoUu1gxnbSGYe1AWmkDS1X9KRlp+gOG5aJTKoFz19RF04MisySep2da2kUXSikA3pZdR+Ul0LO5fa1X9275Q7Cf1ynLMY=,iv:golsojGn8kaG6I9eQh1AvBloYVWYUuVVktEqP6c5UU0=,tag:+iIMdIpDzIOP7rOVMigF+Q==,type:str]
+    lastmodified: "2023-12-08T20:56:02Z"
+    mac: ENC[AES256_GCM,data:Ph0ztbzfvRIwVyc4xAnRRyoUJqODnDY4DxFUKsxb9fCNjnOLxHH+pX+J8W3XExZrUsarDuFQuSq1+awNDfSiko46SpvPuOQAL6zGove+HE8atRVxKNJV5xnlXQC5Jpkmtf1vOZ+B4cYYWzoiRXwbD3KONLzHvcHBNDtbKY3+dJc=,iv:rCsC0qTAzG/UQkhO38EDO8ThlI9YeOabusq5BD/h3d8=,tag:NVd9wqATOx5bZOL3ncciOQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -40,6 +40,7 @@ spec:
             kind: ENC[AES256_GCM,data:ZHK1AZff,iv:sPWFTEKqrZVbCadOLfnbMbN96r+UIlgJhpEiw6Csq7A=,tag:p8M9wkIPatWtwa+qHUd5BQ==,type:str]
             name: ENC[AES256_GCM,data:OtjkjVk30qnqmdtfjKT2psMFBR4=,iv:PhYHegyonmkQZZ+RtnNzzIxZclmakmkVtqBv6rU4UE8=,tag:qNtA4/iQMfgIxkE6cuIIOw==,type:str]
     template:
+        type: ENC[AES256_GCM,data:FOcyYUArSfX/ZYMZ+SsBRonqVSuZne/QZ57ze3Op,iv:SlSdE2bXMbswxj3BqQT//txDHN7C+KgzH3+OxIGJ/pg=,tag:iVrEvPPX9UeJGtJn4eEPRQ==,type:str]
         data:
             .dockerconfigjson: ENC[AES256_GCM,data:6EFvSOykIxHf6qZQR1LnOGPOkTqdlUnlX5l4zv67S/agoCWUmaWWudN1rLl1n8My,iv:AQ1nEOYL5Ndgf0ec67d2efKSeSF5/VGF5fIXG5FTkEg=,tag:sx3xF37Cb1g8szGTkCX9+w==,type:str]
 sops:
@@ -57,8 +58,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:51:27Z"
-    mac: ENC[AES256_GCM,data:gbHONUVYk6OyhjMvvo0kpRjbjqAcfGMCieOsxr8iwYcwYyPearjFMlXL/apP4V6ps+fpcfBuQzLOgPYoUu1gxnbSGYe1AWmkDS1X9KRlp+gOG5aJTKoFz19RF04MisySep2da2kUXSikA3pZdR+Ul0LO5fa1X9275Q7Cf1ynLMY=,iv:golsojGn8kaG6I9eQh1AvBloYVWYUuVVktEqP6c5UU0=,tag:+iIMdIpDzIOP7rOVMigF+Q==,type:str]
+    lastmodified: "2023-12-08T20:56:02Z"
+    mac: ENC[AES256_GCM,data:Ph0ztbzfvRIwVyc4xAnRRyoUJqODnDY4DxFUKsxb9fCNjnOLxHH+pX+J8W3XExZrUsarDuFQuSq1+awNDfSiko46SpvPuOQAL6zGove+HE8atRVxKNJV5xnlXQC5Jpkmtf1vOZ+B4cYYWzoiRXwbD3KONLzHvcHBNDtbKY3+dJc=,iv:rCsC0qTAzG/UQkhO38EDO8ThlI9YeOabusq5BD/h3d8=,tag:NVd9wqATOx5bZOL3ncciOQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
