--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/git-auth.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/git-auth.sops.yaml
@@ -5,11 +5,11 @@ metadata:
     namespace: ENC[AES256_GCM,data:9ZbZekOVa+WCciOdpM6StN7UuZKty/tmc+vPlxCjYBs6xA==,iv:zoZQAbQR0x2oBXxx9RN/myjny64IfjOHOW21C0LglJA=,tag:NI7lwHz7doCZn6s0zuJzeA==,type:str]
     annotations:
         tekton.dev/git-0: ENC[AES256_GCM,data:H886LrG27GjnqMdvYBbLsVYR,iv:j9U3ip8OgmV+DlQEUgbuOAxCyfejkxmMSwzfb0zzP/Q=,tag:n994TkMVdI6M6VrcA3BTQA==,type:str]
-        github.com/token-name: ENC[AES256_GCM,data:wx+VgUMUdO+21HnZ,iv:uyJPt+Odz/+bqt8jmIeLg3N9jNJmGh02+O5zrhtJf/4=,tag:CJZtB28FHGOm3JcjX3iVqQ==,type:str]
+        github.com/token-name: ENC[AES256_GCM,data:g4THRp9ocsn8lu/d,iv:W8Xm0LZpGSaxM0Hds3u+fci6sl2uFqEHE59tEcAmf0M=,tag:6/YUTTcDpPpqbnGaIwm1nQ==,type:str]
 type: ENC[AES256_GCM,data:VNZBGHBgrAge/IeG+PERZAQwNeUtfrd2,iv:iJ0BkIMvnz5aNh0D21EQJFlIJHfrPzKnsduKstbPGwY=,tag:30n2hKgd+fBV+aug6tr20Q==,type:str]
 stringData:
     username: ENC[AES256_GCM,data:f0yMN6n07VPfwgQ94VSeqwiD1w==,iv:qmv3UiN9v0pjoPqQ9vUMllOaqXP8lJUtL78JUBdHr0w=,tag:9Qj6I5C8QHUk3Os07PbEyQ==,type:str]
-    password: ENC[AES256_GCM,data:w97vY1wjGAJIE3b2al+8cJ7KPKLA/wGUNyBimV/epkvPBrUPsJQWrq+HxPo0cLm+AB6OTc2xoG8VOjMT/uI09qaHTa4ftuokH3dqvyJrg1Q1ARuo8l5BnC4wKQ3w,iv:bY4L2A70Paccx3bnKYC2ZTOYoqeYKn3wyGLvyk/Rnik=,tag:CKy6hQRHGSGqzttHpqJj5Q==,type:str]
+    password: ENC[AES256_GCM,data:FQXEvsu7+pRninloGVJ4Ux/z9Yc813nd84wZuU1KLFWHYnOQg0IHGcfsifoRjKJ3xilvHY3g9gAA007yfAxMjau4v6pE6QSx+PZXWIaT7W4oTTeEfbcakUffqOPB,iv:Jil3VLqT94sYzIkKqW+1/dLkkefbW8s4Neajdd1nH3E=,tag:kRrNwK3P1GohhRhaPkXmCQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +25,8 @@ sops:
             QitNNGkyOHdvZ3VRMFpTL3Rnc0ZVaHcKGYaGJPHediEMyNwfNim1QRbFJB+6JfQb
             T+RjA70y3W/D7n78BUHZwSY/0YDVnj5dGoDyfjhgn4AsdZTbkU6SUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-06T16:55:26Z"
-    mac: ENC[AES256_GCM,data:RFFYaqrI0LKZZ6FOxUjE+9yGveTK4snt0QYcd4NterzeWelpVxI3CFl6HV237IOotEX0dTb+nSggEL31gEtnDMrVmRNtiBspsVY2PIUAP2Jcf5G2WpZAy+VJGyRW9c2jWheyQAZXk3b7u9oT1uUGf7cIItWLFbDovytqA6Bq5o0=,iv:qf6GqD7wdxGo2yz4KNi5XEB73AgtswHpJUtN4ph+dHs=,tag:JnFz2g1k2SCWXteF2/VvGg==,type:str]
+    lastmodified: "2023-12-06T16:55:09Z"
+    mac: ENC[AES256_GCM,data:ImFlSN0gmw4WDLZtA6v9Ugpum/z5musYHLbE/+N3uy25/d4drA1MNevrf0PDm5z2ROkzTUs6+b79Izo+emceEHye0+34Gz81m9iqPCZssmNJf54WWm/18Cx/9mZOTSF3HDAyGnhZalNSvUN//5wAEGQm+Y5wrMfLEKb2gL9KjVE=,iv:Z5a3yoEL1Lar502ustEd3qXfzVI0lgAO99Hi5C/1Uuc=,tag:hombj8/OeEZGMg8TMnj/XQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
