--- a/tmc-cd/cd-resources.yaml
+++ b/tmc-cd/cd-resources.yaml
@@ -175,7 +175,10 @@ spec:
                 age:
                   privateKeysSecretRef:
                     name: age-key
-            - ytt: {}
+            - ytt:
+                valuesFrom:
+                - secretRef: 
+                    name: cluster-name-secret
             - kbld: {}
             deploy:
             - kapp: {}
