--- a/packages/tap/config/tap-gui-overlay.yaml
+++ b/packages/tap/config/tap-gui-overlay.yaml
@@ -1,3 +1,4 @@
+#@ load("@ytt:data", "data")
 ---
 apiVersion: v1
 kind: Secret
@@ -9,6 +10,7 @@ metadata:
     kapp.k14s.io/change-rule.1: "delete after deleting pkgi"
 type: Opaque
 stringData:
+  #@yaml/text-templated-strings
   overlay.yaml: |
     #@ load("@ytt:overlay", "overlay")
     #@overlay/match by=overlay.subset({"kind": "ServiceAccount", "metadata": {"name": "tap-gui"}})
@@ -17,4 +19,4 @@ stringData:
     #@overlay/match-child-defaults missing_ok=True
     metadata:
       annotations:
-        eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/cdd-demo-tap-gui-tap-gui
+        eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/(@-= data.values.cluster_name -@)-tap-gui-tap-gui
