--- a/packages/tap/config/tap-gui-overlay.yaml
+++ b/packages/tap/config/tap-gui-overlay.yaml
@@ -19,4 +19,4 @@ stringData:
     #@overlay/match-child-defaults missing_ok=True
     metadata:
       annotations:
-        eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/(@-= data.values.cluster_name -@)-tap-gui-tap-gui
+        eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/(@-= data.values.tap_install.cluster_name -@)-tap-gui-tap-gui
