--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
@@ -1,3 +1,4 @@
+#@ load("@ytt:data", "data")
 ---
 apiVersion: v1
 kind: Secret
@@ -10,13 +11,15 @@ metadata:
     kapp.k14s.io/change-rule.1: "delete after deleting tap"
 type: Opaque
 stringData:
+  #@yaml/text-templated-strings
   values.yaml: |
     tap_install:
       version:
         package_repo_bundle_tag: "1.7.1"
         package_version: "1.7.1"
+      cluster_name: (@= data.values.cluster_name.rsplit(".",1)[1] @)
       values:
-        profile: iterate
+        profile: full
         shared:
           ingress_domain: "build-run.aws-work.grogscave.net"
           image_registry:
