--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/registry-credentials.sops.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/registry-credentials.sops.yaml
@@ -21,8 +21,8 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:56:02Z"
-    mac: ENC[AES256_GCM,data:Ph0ztbzfvRIwVyc4xAnRRyoUJqODnDY4DxFUKsxb9fCNjnOLxHH+pX+J8W3XExZrUsarDuFQuSq1+awNDfSiko46SpvPuOQAL6zGove+HE8atRVxKNJV5xnlXQC5Jpkmtf1vOZ+B4cYYWzoiRXwbD3KONLzHvcHBNDtbKY3+dJc=,iv:rCsC0qTAzG/UQkhO38EDO8ThlI9YeOabusq5BD/h3d8=,tag:NVd9wqATOx5bZOL3ncciOQ==,type:str]
+    lastmodified: "2023-12-12T15:31:06Z"
+    mac: ENC[AES256_GCM,data:aOMCHt2vZSMZ5PRfNxOPPgAHmGVW0AkllalIweabDz5iq+1cX8fFoWL3ULPZ65POJjomaN0EQef+GdHnOjXNhTai5EbC8riPfdTPmwYhvF8b/BYi0huqCblT0GvcU+x5bTB9MudkhSg0AXXd5qr/90OoXdZo1GW5+SDrs+Rzxv4=,iv:Rrx86jR/TIiYP8YFAiCcj1srOuBPD8lvOQZQQ69D/H4=,tag:lcltySFF6Pg5r8zVavMt3Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
@@ -58,8 +58,74 @@ sops:
             cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
             0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-08T20:56:02Z"
-    mac: ENC[AES256_GCM,data:Ph0ztbzfvRIwVyc4xAnRRyoUJqODnDY4DxFUKsxb9fCNjnOLxHH+pX+J8W3XExZrUsarDuFQuSq1+awNDfSiko46SpvPuOQAL6zGove+HE8atRVxKNJV5xnlXQC5Jpkmtf1vOZ+B4cYYWzoiRXwbD3KONLzHvcHBNDtbKY3+dJc=,iv:rCsC0qTAzG/UQkhO38EDO8ThlI9YeOabusq5BD/h3d8=,tag:NVd9wqATOx5bZOL3ncciOQ==,type:str]
+    lastmodified: "2023-12-12T15:31:06Z"
+    mac: ENC[AES256_GCM,data:aOMCHt2vZSMZ5PRfNxOPPgAHmGVW0AkllalIweabDz5iq+1cX8fFoWL3ULPZ65POJjomaN0EQef+GdHnOjXNhTai5EbC8riPfdTPmwYhvF8b/BYi0huqCblT0GvcU+x5bTB9MudkhSg0AXXd5qr/90OoXdZo1GW5+SDrs+Rzxv4=,iv:Rrx86jR/TIiYP8YFAiCcj1srOuBPD8lvOQZQQ69D/H4=,tag:lcltySFF6Pg5r8zVavMt3Q==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
+---
+apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42rGWGC0VwfoLvZyAkSs9HbyU50qL6mXHzWm+x1R0=,tag:olkPOfJPRiNUUmNt9e8TtA==,type:str]
+kind: ENC[AES256_GCM,data:FqwQGkBQ8l4bBbtNSzM=,iv:SOt7hHi0PVwDFS5eXLzZ9h0NatjBJhPTeGSuH/NfHr8=,tag:9b1VfY6qpfM1jEH51sSfIw==,type:str]
+metadata:
+    name: ENC[AES256_GCM,data:ErAXuWcqy8te7HB3DbAsi7ER4RMLXgOnRjs=,iv:xBXMOV0TuI0IqAkN3p/Tgm33Ebk2hFLCj7FrcmFftRk=,tag:miAFYJGlyK5JqGa20M1nNQ==,type:str]
+    namespace: ENC[AES256_GCM,data:qQeLqGsYZIbbetD1i+NZSTi8/HyYAYN7fZlaZk8IOyrZ0Q==,iv:/hKt0wTpg/1bqJwM20BJt84FhpKRa3wRiymj23/zH70=,tag:wCXYIz2qrlw4k/ngDhcNiA==,type:str]
+spec:
+    inputResources:
+        - name: ENC[AES256_GCM,data:x0ubiI1JOpUgB9R188sW4mbfGbM=,iv:NT3pVuoMRjDFaIJBVuNng+FpfUrqjuULVpslile7BTI=,tag:014fg8Nk838imhHuTDcZNA==,type:str]
+          ref:
+            apiVersion: ENC[AES256_GCM,data:psY=,iv:pbkXLgSBoCkrQaNl3cXZr7/KjTix3NexpPjKboG1Ziw=,tag:V/H4yvoW7/neBpmNT64a4w==,type:str]
+            kind: ENC[AES256_GCM,data:ZHK1AZff,iv:sPWFTEKqrZVbCadOLfnbMbN96r+UIlgJhpEiw6Csq7A=,tag:p8M9wkIPatWtwa+qHUd5BQ==,type:str]
+            name: ENC[AES256_GCM,data:OtjkjVk30qnqmdtfjKT2psMFBR4=,iv:PhYHegyonmkQZZ+RtnNzzIxZclmakmkVtqBv6rU4UE8=,tag:qNtA4/iQMfgIxkE6cuIIOw==,type:str]
+    template:
+        type: ENC[AES256_GCM,data:FOcyYUArSfX/ZYMZ+SsBRonqVSuZne/QZ57ze3Op,iv:SlSdE2bXMbswxj3BqQT//txDHN7C+KgzH3+OxIGJ/pg=,tag:iVrEvPPX9UeJGtJn4eEPRQ==,type:str]
+        data:
+            .dockerconfigjson: ENC[AES256_GCM,data:6EFvSOykIxHf6qZQR1LnOGPOkTqdlUnlX5l4zv67S/agoCWUmaWWudN1rLl1n8My,iv:AQ1nEOYL5Ndgf0ec67d2efKSeSF5/VGF5fIXG5FTkEg=,tag:sx3xF37Cb1g8szGTkCX9+w==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1lq56x4rdmlw7tn23s0t7n62mzqc3q7kna4fe0r0v8hqplk2yt4kqgauj2t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUeHZhTm1DY2hBUkk0eER2
+            S0ZhbzJDd3RhWC8xODZJVVEyNitKL0IvVDJFClA2YTJkTGNVTlZBWnFTOTFGMGQ4
+            UTNmb1VXRnVWbGtWVThxVFBvY3E4WEEKLS0tIGZseGlwUlRsOU1tTWRMNzJSdGtY
+            cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
+            0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-12T15:31:06Z"
+    mac: ENC[AES256_GCM,data:aOMCHt2vZSMZ5PRfNxOPPgAHmGVW0AkllalIweabDz5iq+1cX8fFoWL3ULPZ65POJjomaN0EQef+GdHnOjXNhTai5EbC8riPfdTPmwYhvF8b/BYi0huqCblT0GvcU+x5bTB9MudkhSg0AXXd5qr/90OoXdZo1GW5+SDrs+Rzxv4=,iv:Rrx86jR/TIiYP8YFAiCcj1srOuBPD8lvOQZQQ69D/H4=,tag:lcltySFF6Pg5r8zVavMt3Q==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
+---
+apiVersion: ENC[AES256_GCM,data:nWHRAEYwfx1BfRe3zjC5Sp+UWeIMF7U7StKaaSo=,iv:ct42rGWGC0VwfoLvZyAkSs9HbyU50qL6mXHzWm+x1R0=,tag:olkPOfJPRiNUUmNt9e8TtA==,type:str]
+kind: ENC[AES256_GCM,data:JwKlXzo8iygSQYX8,iv:v6D0AxWt2wMWzQLyhGW5uJOesk/6GPvEBlpT5NMEKqo=,tag:fiA5ZPs55RZiuN5Sbkujrg==,type:str]
+metadata:
+    name: ENC[AES256_GCM,data:ZChHvOweZAbp4lBcrP8i2N1kbYVnnWDLvhM=,iv:z3tG6PjI/slgVLT47DfuRGD1H3MJeGHTz7Fq4Ay98dg=,tag:ZHLpi1mk701T2Ic5jNzlQA==,type:str]
+    namespace: ENC[AES256_GCM,data:qQeLqGsYZIbbetD1i+NZSTi8/HyYAYN7fZlaZk8IOyrZ0Q==,iv:/hKt0wTpg/1bqJwM20BJt84FhpKRa3wRiymj23/zH70=,tag:wCXYIz2qrlw4k/ngDhcNiA==,type:str]
+spec:
+    toNamespaces:
+        - ENC[AES256_GCM,data:OQ==,iv:/5XOua23Pb9TtMtEI5Y6hfR7ybMpW/eqMOR7WfPEdcc=,tag:qWsfLdEPzVFm+LZtCkYk/w==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1lq56x4rdmlw7tn23s0t7n62mzqc3q7kna4fe0r0v8hqplk2yt4kqgauj2t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUeHZhTm1DY2hBUkk0eER2
+            S0ZhbzJDd3RhWC8xODZJVVEyNitKL0IvVDJFClA2YTJkTGNVTlZBWnFTOTFGMGQ4
+            UTNmb1VXRnVWbGtWVThxVFBvY3E4WEEKLS0tIGZseGlwUlRsOU1tTWRMNzJSdGtY
+            cHdCVzEzMXdmYllMVDhxR0ZRT3V0ZFkK24JHOrEtgXAmlQIyA+deDeg4jrcn16zz
+            0cvjoJpYvOQG7imyONfPa57262NGGm8+6K/tO5thR2wf9HjtWg5ANQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-12T15:31:06Z"
+    mac: ENC[AES256_GCM,data:aOMCHt2vZSMZ5PRfNxOPPgAHmGVW0AkllalIweabDz5iq+1cX8fFoWL3ULPZ65POJjomaN0EQef+GdHnOjXNhTai5EbC8riPfdTPmwYhvF8b/BYi0huqCblT0GvcU+x5bTB9MudkhSg0AXXd5qr/90OoXdZo1GW5+SDrs+Rzxv4=,iv:Rrx86jR/TIiYP8YFAiCcj1srOuBPD8lvOQZQQ69D/H4=,tag:lcltySFF6Pg5r8zVavMt3Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
