Just remove iterate only stuff

--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo-build-run/tap-role.yaml
@@ -20,6 +20,9 @@ stringData:
       cluster_name: (@= data.values.cluster_name.rsplit(".",1)[1] @)
       values:
         profile: full
+        excluded_packages:
+        - local-source-proxy.apps.tanzu.vmware.com
+        - developer-conventions.tanzu.vmware.com
         shared:
           ingress_domain: "build-run.aws-work.grogscave.net"
           image_registry:
